# tasks

./: .gitignore  1.py  10.py  2.py  3.py  8.py  README.md  alphabet.py
1/: add.py  create.py  example.db  get.py
2/: add.py  create.py  get.py  products.db  test.py
OOP/: abst.py  pyproject.toml
flask/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  6.py  8.py  9.py  airports.py  pyproject.toml  test.py
flask/airports/: 1.py  11.py  2.py  3.py  4.py  5.py  flights.py
flask/alphabet_tasks/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  alphabet.py
flask/method_post/: 1.py  2.py  3.py  4.py  5.py  6.py
flask/templates_tasks/: 1.py  2.py  3.py  4.py
flask/templates_tasks/templates/: 1.html  2.html  3.html  4.html
metrics/: README.md
rabbit/: pyproject.toml  receive.py  send.py
tasks/: no_repeat.py
tech_task_1/app1/: models.py  views.py
tech_task_1/app1/migrations/: 0001_initial.py  0002_text_public.py  0003_alter_text_text.py  0004_alter_text_id.py
tech_task_1/app1/static/bootstrap/css/: bootstrap.css
tech_task_1/app1/static/sccs/: custom.sccs
tech_task_1/app1/templates/app1/: account.html  index.html  login.html  signup.html
tech_task_1/djanwiki/: settings.py  urls.py
tech_task_1/site/: pyproject.toml
tech_task_1/site/app1/: urls.py  views.py
tech_task_1/site/app1/templates/app1/: index.html
tech_task_1/site/djanwiki/: asgi.py  settings.py  urls.py  wsgi.py
trash/: fastapi-jwt-trash.py  pyproject.toml  ws-fastapi.py
unittest/: test_1.py
